// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rule component renders first blue correctly 1`] = `
<div>
  <div
    class="sc-bdvvaa kddHim"
  >
    <div
      class="gatsby-image-wrapper"
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden; width: 250px; height: 50px;"
    >
      <img
        alt=""
        aria-hidden="true"
        data-placeholder-image=""
        decoding="async"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAzElEQVQY002PoUqEURSELyqCPsKC5UyZwWAybjAazIJVEAwahZnmQ6xNEB/AZPQJNmwz2ZZ9AJPFsHLdXX/DYSYcmO9rkA9LnkC5hnIF+QbKOeRjKCMwe6C3QW9BaWBa0a33TQ7n1ssFlGXRS6hf1rnu9BeUOZQPKFMob1BeoDyDfoByW8oYylEfa1itjIu+g3Ja9FnRfeQe8iOUVygz0O9QFlA+S/nuAL8Q3EDkqRMPuMyfxkpl0PmntlP0LpT9kkeQC/QJ6EsoB/3nB3LSXCQp8/2tAAAAAElFTkSuQmCC"
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <picture>
        <source
          data-srcset="/static/67b0d08c3c2e833ca41507eb072dc0b7/9b70c/blue-rule-1.webp 250w,/static/67b0d08c3c2e833ca41507eb072dc0b7/d75ea/blue-rule-1.webp 500w"
          sizes="250px"
          type="image/webp"
        />
        <img
          alt=""
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="/static/67b0d08c3c2e833ca41507eb072dc0b7/c6be9/blue-rule-1.png"
          data-srcset="/static/67b0d08c3c2e833ca41507eb072dc0b7/c6be9/blue-rule-1.png 250w,/static/67b0d08c3c2e833ca41507eb072dc0b7/8861b/blue-rule-1.png 500w"
          decoding="async"
          role="presentation"
          sizes="250px"
          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
        />
      </picture>
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
      </script>
    </div>
  </div>
</div>
`;

exports[`Rule component renders first peach correctly 1`] = `
<div>
  <div
    class="sc-bdvvaa kddHim"
  >
    <div
      class="gatsby-image-wrapper"
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden; width: 250px; height: 50px;"
    >
      <img
        alt=""
        aria-hidden="true"
        data-placeholder-image=""
        decoding="async"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsTAAALEwEAmpwYAAAA0UlEQVQY002QIU8DUAyEX7JkIQjcDGgCZpmaIcg5FAkEOzmFXlgyNzGJ6GVL9i96CUj+AxaHRmDvxMh7DDZR0157/a4oUcxWXSUulTEwcW7iqPb1OytNt9OKUczomLgwcaPEvRLXIjpVcGbiSYl3EVvvSsS3iBclZkrcKjE00TdxZWIqxoey6mLb9hKfYhwXZdx5f2gjYmHi2cSbMnww25tlO/JlYm3iUYxxNaoU9f1TE68mVg39DysrFk7EGJmYmFGNlsqYm3gQ0XND/4+sRfEDgWXV8xrexRQAAAAASUVORK5CYII="
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <picture>
        <source
          data-srcset="/static/26c5d56f5ffc25b93a3f32320c69d9ec/9b70c/peach-rule-1.webp 250w,/static/26c5d56f5ffc25b93a3f32320c69d9ec/d75ea/peach-rule-1.webp 500w"
          sizes="250px"
          type="image/webp"
        />
        <img
          alt=""
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="/static/26c5d56f5ffc25b93a3f32320c69d9ec/c6be9/peach-rule-1.png"
          data-srcset="/static/26c5d56f5ffc25b93a3f32320c69d9ec/c6be9/peach-rule-1.png 250w,/static/26c5d56f5ffc25b93a3f32320c69d9ec/8861b/peach-rule-1.png 500w"
          decoding="async"
          role="presentation"
          sizes="250px"
          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
        />
      </picture>
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
      </script>
    </div>
  </div>
</div>
`;

exports[`Rule component renders second blue correctly 1`] = `
<div>
  <div
    class="sc-bdvvaa kddHim"
  >
    <div
      class="gatsby-image-wrapper"
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden; width: 250px; height: 50px;"
    >
      <img
        alt=""
        aria-hidden="true"
        data-placeholder-image=""
        decoding="async"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAuUlEQVQY022QLQ5CMRCEKwGBxe8IOgKN4CfcAYPBcQIUOxJHQvIUnIAj4Ek4AGch4DCP9LUPhZg0mf2ys9MAKlj0kF5QfdABagRqCKpX/J+MiS189DmoE6g7qLVFhWQmYGqxMZ9G1aBqy3qDuoGqLPoK1BT0Jahd8evM+wdUmoc2uUIePEAdQD+COjfJUS+UkD+6gpohqptapuuD5YVjUBdQk1KlVGrUKV+wAbUHtQV9AWqQj8lsu/ALOt1cd5DIj28AAAAASUVORK5CYII="
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <picture>
        <source
          data-srcset="/static/076d5d41e1eea59ac5a66941adccd0af/9b70c/blue-rule-2.webp 250w,/static/076d5d41e1eea59ac5a66941adccd0af/d75ea/blue-rule-2.webp 500w"
          sizes="250px"
          type="image/webp"
        />
        <img
          alt=""
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="/static/076d5d41e1eea59ac5a66941adccd0af/c6be9/blue-rule-2.png"
          data-srcset="/static/076d5d41e1eea59ac5a66941adccd0af/c6be9/blue-rule-2.png 250w,/static/076d5d41e1eea59ac5a66941adccd0af/8861b/blue-rule-2.png 500w"
          decoding="async"
          role="presentation"
          sizes="250px"
          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
        />
      </picture>
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
      </script>
    </div>
  </div>
</div>
`;

exports[`Rule component renders second peach correctly 1`] = `
<div>
  <div
    class="sc-bdvvaa kddHim"
  >
    <div
      class="gatsby-image-wrapper"
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden; width: 250px; height: 50px;"
    >
      <img
        alt=""
        aria-hidden="true"
        data-placeholder-image=""
        decoding="async"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAy0lEQVQY002QrUpEcRTE/7LgBxajVfQZxGTZJ1DsRosPYLLpG5yJJrNlhm0bxOYDLBvEBxCxCIYZ5Mq698INP2Y4M+EwLUKLsNfrP2Y1D36lXN/GnRGnEe4jTKPaaObKIGbNzboJ69ysQ7O2Qkysmpi1adVOhO0I+yFOQlxGeIjQmdVZ+Ayx26w6jvBk4rcPuqz5ivAW4j3CR4RvCz8Z8qFLvES4i3BlVRu/fhThLMR1hLLq2aplhEWE1wjzCLMIj1bdRrgwcTBM4Z4/5BTVbZAgL/sAAAAASUVORK5CYII="
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <picture>
        <source
          data-srcset="/static/a05e09cc31b2010761f6939e6b0ff437/9b70c/peach-rule-2.webp 250w,/static/a05e09cc31b2010761f6939e6b0ff437/d75ea/peach-rule-2.webp 500w"
          sizes="250px"
          type="image/webp"
        />
        <img
          alt=""
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="/static/a05e09cc31b2010761f6939e6b0ff437/c6be9/peach-rule-2.png"
          data-srcset="/static/a05e09cc31b2010761f6939e6b0ff437/c6be9/peach-rule-2.png 250w,/static/a05e09cc31b2010761f6939e6b0ff437/8861b/peach-rule-2.png 500w"
          decoding="async"
          role="presentation"
          sizes="250px"
          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
        />
      </picture>
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
      </script>
    </div>
  </div>
</div>
`;

exports[`Rule component renders third blue correctly 1`] = `
<div>
  <div
    class="sc-bdvvaa kddHim"
  >
    <div
      class="gatsby-image-wrapper"
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden; width: 250px; height: 50px;"
    >
      <img
        alt=""
        aria-hidden="true"
        data-placeholder-image=""
        decoding="async"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAsElEQVQY012QvQqBcRTG32xKiZGiziOdZ5ZksSuDmcnuBs6zcBeY7FjdjtyETej1/hWGX+f7MwMjA7UENQGV/eD/eryxJFNsCmoERim3M3h0QT0TO1ALeAxBdcyjCqoCqmYeNVANMJrGaIEamMcajEeq7b8bWjFlDury1fhDnnz/95vHt30zjyuodrEhlU5QGa4eqBmoNagNqJMxzqCOOUYdQO3h2oJagRoXW6v+ec0LwR5dSqbEP8AAAAAASUVORK5CYII="
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <picture>
        <source
          data-srcset="/static/d125696f24e25d41ca2493208bb215bf/9b70c/blue-rule-3.webp 250w,/static/d125696f24e25d41ca2493208bb215bf/d75ea/blue-rule-3.webp 500w"
          sizes="250px"
          type="image/webp"
        />
        <img
          alt=""
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="/static/d125696f24e25d41ca2493208bb215bf/c6be9/blue-rule-3.png"
          data-srcset="/static/d125696f24e25d41ca2493208bb215bf/c6be9/blue-rule-3.png 250w,/static/d125696f24e25d41ca2493208bb215bf/8861b/blue-rule-3.png 500w"
          decoding="async"
          role="presentation"
          sizes="250px"
          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
        />
      </picture>
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
      </script>
    </div>
  </div>
</div>
`;

exports[`Rule component renders third peach correctly 1`] = `
<div>
  <div
    class="sc-bdvvaa kddHim"
  >
    <div
      class="gatsby-image-wrapper"
      data-gatsby-image-wrapper=""
      style="position: relative; overflow: hidden; width: 250px; height: 50px;"
    >
      <img
        alt=""
        aria-hidden="true"
        data-placeholder-image=""
        decoding="async"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAvUlEQVQY022PoU7CcRSFf2wWZrEZaSSSRLUYSM5O1agVneI7mO7pPMM5Vavdx6Aa2M4JMP7C2Jjh27k74X73NgtjCx8RHiO8RJhbeIvwEOHOqomFgVknEVpYrUtVC9HN3vdEa2bNI6zDP7xNHcFam7W08BlhEaFCvFqYRriwcLoVmtXbG4cR7iNcRbiMcB3hNsJThFm3QPgO8eud5Ei8CuvHxNnh5P/g7rVD1w9xbmJk4SbCu1mLEF9WPZvVNs491NF9y0rtAAAAAElFTkSuQmCC"
        style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      />
      <picture>
        <source
          data-srcset="/static/56cc43c92f2405255f70b1c07e45a507/9b70c/peach-rule-3.webp 250w,/static/56cc43c92f2405255f70b1c07e45a507/d75ea/peach-rule-3.webp 500w"
          sizes="250px"
          type="image/webp"
        />
        <img
          alt=""
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="/static/56cc43c92f2405255f70b1c07e45a507/c6be9/peach-rule-3.png"
          data-srcset="/static/56cc43c92f2405255f70b1c07e45a507/c6be9/peach-rule-3.png 250w,/static/56cc43c92f2405255f70b1c07e45a507/8861b/peach-rule-3.png 500w"
          decoding="async"
          role="presentation"
          sizes="250px"
          style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
        />
      </picture>
      <noscript />
      <script
        type="module"
      >
        const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
      </script>
    </div>
  </div>
</div>
`;
